# nonebot-plugin-tea-silencer

./: README.md  pyproject.toml
nonebot_plugin_tea_silencer/: __init__.py  config.py  silencer.py
nonebot_plugin_tea_silencer/nonebot_plugin_tea_silencer/: __init__.py
nonebot_plugin_tea_silencer/nonebot_plugin_tea_silencer/silencer/filter/: 广告.json  非法.json
nonebot_plugin_tea_silencer/nonebot_plugin_tea_silencer/silencer/flymo/: 提示.json  棉花.json  阴阳.json
nonebot_plugin_tea_silencer/silencer/filter/: 侮辱.json  建政.json  涩涩.json  键政.json
nonebot_plugin_tea_silencer/silencer/flymo/: 飞马.json
